# os_projects

الهه فانی نامقی_1702320_assignsubmission_file_/: Fani_Soleymani .rar
امیررضا نمازی بایگی_1702296_assignsubmission_file_/: main.cpp  out
انیتا گنجی مقدم_1702310_assignsubmission_file_/system/: final.2
بنیامین اسدی_1702294_assignsubmission_file_/: OS.py  README.md
ریحانه یگانه_1702304_assignsubmission_file_/FileMonitoring_4001262240_ReyhanehYeganeh/: midterm_project  midterm_project.c  readme.md
زهرا صفری قزلقان_1702305_assignsubmission_file_/: main.c
زهرا پوربشیری_1702309_assignsubmission_file_/: Program.c
ستاره کهنموئی_1702289_assignsubmission_file_/: README.md  testP.c
ستاره کهنموئی_1702289_assignsubmission_file_/__MACOSX/: ._testP.c
سیدامیرمحمد حسینی_1702318_assignsubmission_file_/: README.md  version11.C
سیده مریم حسینی_1702312_assignsubmission_file_/: last.c
شاهین فائزی رازی_1702323_assignsubmission_file_/: OS.c
شکیلا حبیبی_1702303_assignsubmission_file_/: readme.md.docx  systemPRJ.c
عالیه اذانی_1702293_assignsubmission_file_/: original.c  مراحل انجام پروژه.docx
علی جعفری_1702328_assignsubmission_file_/: CMakeLists.txt  myncdu.rar  run.sh
علی وزیری نژاد_1702282_assignsubmission_file_/unix_directory_analyzer/: CMakeLists.txt  main.cpp  main.h
محمد شریفی_1702315_assignsubmission_file_/: main.c  readme.md
محمدرضا کشت گرقاسمی_1702298_assignsubmission_file_/: OS_project_4022330021.rar
مینا علی پورثانی_1702325_assignsubmission_file_/: README.md
نرگس جعفری_1702302_assignsubmission_file_/: README.md  main  main.c
(+48 files in other folders)
